force-app/main/default/objects/Study_Closure__c/Study_Closure__c.object-meta.xml
<CustomObject>
    <label>Study Closure</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Study Closure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Closures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>