force-app/main/default/objects/Study_Closure__c/fields/Clinical_Trial_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical Trial Profile Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>