force-app/main/default/objects/Study_Closure__c/fields/Only_Selected_Participants__c.field-meta.xml
<CustomField>
    <fullName>Only_Selected_Participants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Selected Participants</label>
    <type>Checkbox</type>
</CustomField>