force-app/main/default/objects/Study_Closure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Clinical_Trial_Profile_Id__c</columns>
    <columns>Clinical_Trial_Profile_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>